--- a/src/AdminPannel/techassets/techcss/TechLeft.css
+++ b/src/AdminPannel/techassets/techcss/TechLeft.css
@@ -148,7 +148,7 @@ header {
 } */
 .dp {
   font-size: var(--nd-space-500);
-  background-color:var(--nd-gray);
+  background-color: var(--nd-gray);
   width: 32px;
   height: 32px;
   border-radius: 50%;
@@ -241,11 +241,19 @@ header {
 .nav-option {
   width: 250px;
   height: 60px;
-  display: flex;
+
   align-items: center;
   padding: 12px 30px 0 20px;
   gap: 20px;
   transition: all 0.1s ease-in-out;
+}
+
+.subroutes {
+  background-color: #248afd;
+  min-height: auto;
+}
+.nav-subitem:hover{
+  background-color: #084fa0;
 }
 
 .nav-option:hover {
