--- a/src/assets/css/LeftNav.css
+++ b/src/assets/css/LeftNav.css
@@ -236,11 +236,10 @@ header {
 .navclose {
   width: 72px;
 }
-
 .nav-option {
   width: 250px;
   height: 60px;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   padding: 12px 30px 0 20px;
   gap: 20px;
