--- a/src/AdminPannel/techassets/techcss/CDPO.css
+++ b/src/AdminPannel/techassets/techcss/CDPO.css
@@ -54,13 +54,14 @@
     height: 42px !important;
     background-color: var(--nd-blue-light-bg);
     outline: none;
-    border: 1px solid #fff;
+    border: none;
     padding: 0;
     width: 0;
     height: 100%;
     z-index: 10;
     transition: width 0.4s ease-in-out, padding 0.4s ease-in-out;
     border-radius: 20px;
+    font-size: 12px;
 }
 
 .search:focus {
