Dashboard theme UI updated

--- a/src/AdminPannel/Directorate_login/direc_assets/css/DirecCDPO.css
+++ b/src/AdminPannel/Directorate_login/direc_assets/css/DirecCDPO.css
@@ -7,3 +7,15 @@ th
   background: #ef6236 !important;
   color: var(--nd-white) !important;
 }
+.direct-paging .active>.page-link, .page-link.active{
+    background: #ef6236 !important;
+    border: 1px solid #ef6236 ;
+    color: var(--nd-white) !important;
+}
+.direct-paging .page-item:first-child .page-link{
+color: #000;
+}
+.direct-paging .page-item:not(:first-child) .page-link
+{
+    color: black;
+}
