--- a/src/AdminPannel/Directorate_login/direc_assets/css/DirectorateLeftNav.css
+++ b/src/AdminPannel/Directorate_login/direc_assets/css/DirectorateLeftNav.css
@@ -82,9 +82,6 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: var(--nd-space-150);
 }
-
-.direc-options .option1 {}
-
 .nd-12th-title a {
   text-decoration: none;
 }
@@ -199,10 +196,11 @@ body {
 
 .box-container {
   flex-wrap: wrap;
-  border: 2px solid var(--nd-border);
+  border: 1px solid var(--nd-border);
   background-color: var(--nd-white);
   border-radius: var(--nd-space-200);
   padding: 12px 16px 30px 16px;
+  box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
 }
 
 .nav-direc {
@@ -278,10 +276,12 @@ body {
 
 .direc-item {
   margin-left: 12px !important;
+  margin-top: 8px;
 }
 
 .direc-nav-item {
   margin-left: 12px !important;
+  margin-top: 8px;
 }
 
 .nav-direc-arrow {
@@ -289,9 +289,13 @@ body {
 }
 .nav-subitem-direc{
   padding-left: 54px;
+  padding-top: 8px;
 }
 .nav-subitem-direc:hover{
   background-color: #ab492a;
+}
+.nav-direc-subitem {
+  padding-top: 8px;
 }
 .nav-direc-subitem:hover {
   border-left: 5px solid var(--nd-white);
