--- a/src/AdminPannel/techassets/techcss/TechLeft.css
+++ b/src/AdminPannel/techassets/techcss/TechLeft.css
@@ -85,7 +85,7 @@ body {
   margin-bottom: var(--nd-space-150);
 }
 
-.tech-options .option1 {}
+
 
 .nd-12th-title a {
   text-decoration: none;
@@ -201,10 +201,11 @@ body {
 
 .box-container {
   flex-wrap: wrap;
-  border: 2px solid var(--nd-border);
+  border: 1px solid var(--nd-border);
   background-color: var(--nd-white);
   border-radius: var(--nd-space-200);
   padding: 12px 16px 30px 16px;
+  box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
 }
 
 .nav-tech {
