pending Direc pages changes done

--- a/src/AdminPannel/Directorate_login/direc_assets/css/DistrictWise.css
+++ b/src/AdminPannel/Directorate_login/direc_assets/css/DistrictWise.css
@@ -2,7 +2,7 @@
     background-color:#ab492a !important;
  
 }
-.direc-12th-border{
+.nd-direc-border{
     border-right: 1px solid white;
 }
 .nd-direc-heading h1{
