dashboard UI changes has been done

--- a/src/AdminPannel/Directorate_login/direc_assets/css/DirectorateDashboard.css
+++ b/src/AdminPannel/Directorate_login/direc_assets/css/DirectorateDashboard.css
@@ -1,6 +1,8 @@
 .girlsbox {
-z-index: 1;
+    z-index: 1;
+    border-radius: var(--nd-space-250);
 }
+
 .girlsbox::after {
     background-image: url("../../../../assets/images/dash12thimg.png");
     content: "";
@@ -10,9 +12,11 @@ z-index: 1;
     background-size: cover;
     background-position: 50%;
     background-repeat: repeat;
-    z-index:-1;
+    z-index: -1;
     opacity: .1;
+    border-radius: var(--nd-space-200);
 }
+
 .girlsbox::before {
     content: "";
     position: absolute;
@@ -20,10 +24,14 @@ z-index: 1;
     height: 100%;
     background-image: linear-gradient(to right top, #ff9794, #fd8dac, #e58cc6, #bf7cdc, #6f78f4);
     z-index: -1;
+    border-radius: var(--nd-space-200);
 }
-.bornbox{
+
+.bornbox {
     z-index: 1;
+    border-radius: var(--nd-space-250);
 }
+
 .bornbox::after {
     background-image: url("../../../../assets/images/dash12thimg.png");
     content: "";
@@ -33,9 +41,11 @@ z-index: 1;
     background-size: cover;
     background-position: 50%;
     background-repeat: repeat;
-    z-index:-1;
+    z-index: -1;
     opacity: .1;
+    border-radius: var(--nd-space-200);
 }
+
 .bornbox::before {
     content: "";
     position: absolute;
@@ -43,18 +53,96 @@ z-index: 1;
     height: 100%;
     background-color: #5c67f7;
     z-index: -1;
+    border-radius: var(--nd-space-200);
 }
-.nd-tech-heading {
+
+.nd-tech-heading1 {
     display: flex;
     justify-content: space-around;
     padding: var(--nd-space-50);
+    margin-top: var(--nd-space-100);
+
 }
+
+.nd-tech-heading1 h2 {
+    font-size: var(--nd-space-350);
+    font-weight: 500;
+}
+
 .bg-praroop-feedback {
-    background-color: orange;
+    z-index: 1;
+    border-radius: var(--nd-space-250);
+}
+
+.bg-praroop-feedback::after {
+    background-image: url("../../../../assets/images/bg-01.png");
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: 50%;
+    background-repeat: repeat;
+    z-index: -1;
+    opacity: .6;
+    border-radius: var(--nd-space-200);
+}
+
+.bg-praroop-feedback::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom right, #00d2d7, #07b2dd);
+    z-index: -1;
+    border-radius: var(--nd-space-200);
 }
 
 .bg-praroop-appo {
-    background-color: green;
+    z-index: 1;
+    border-radius: var(--nd-space-250);
+}
+
+.bg-praroop-appo::after {
+    background-image: url("../../../../assets/images/bg-02.jpg");
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: 50%;
+    background-repeat: repeat;
+    z-index: -1;
+    opacity: .5;
+    border-radius: var(--nd-space-200);
+}
+
+.bg-praroop-appo::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom right, #ffd85d, #ffc200);
+    z-index: -1;
+    border-radius: var(--nd-space-200);
+}
+
+.nd-approved {
+    color: var(--nd-black);
+    font-size: var(--nd-space-300);
+    padding: var(--nd-space-50);
+}
+
+.nd-direc-heading p {
+    font-size: var(--nd-space-300);
+    color: var(--nd-black);
+    line-height: 4px;
+
+}
+
+.direc-dashboard {
+    font-size: var(--nd-space-350);
+    font-weight: 500;
 }
 
 .stats h1 {
@@ -63,7 +151,7 @@ z-index: 1;
 }
 
 .direc-icon img {
-    max-width: 100px;
+    max-width: 94px;
     align-items: center;
     margin-top: 20px;
 }
@@ -74,11 +162,23 @@ z-index: 1;
 
 .nd-praroop-heading {
     color: var(--nd-white);
-    font-size: var(--nd-space-500);
+    font-size: var(--nd-space-400);
 }
 
 .direc-praroop-data {
     color: var(--nd-white);
+    font-size: var(--nd-space-300);
+    padding: var(--nd-space-50);
+}
+
+.direc-praroop-data1 {
+    color: var(--nd-white);
+    font-weight: 600;
+    padding: var(--nd-space-50);
+}
+
+.cdpo-data {
+    color: var(--nd-black);
     font-size: var(--nd-space-300);
     padding: var(--nd-space-50);
 }
@@ -92,7 +192,7 @@ z-index: 1;
         margin-top: var(--nd-space-400);
     }
 
-    .nd-tech-heading {
+    .nd-tech-heading1 {
 
         padding: var(--nd-space-300);
     }
