--- a/src/AdminPannel/techassets/techcss/TechLeft.css
+++ b/src/AdminPannel/techassets/techcss/TechLeft.css
@@ -36,7 +36,7 @@ body {
 .tech-header {
   height: 70px;
   width: 100vw;
-  padding: 0 30px;
+  padding: 0 30px 0px 16px;
   background: linear-gradient(to bottom, rgb(164 164 164), white);
   position: fixed;
   z-index: 100;
