Project Login dashboard structured has been done

--- a/src/AdminPannel/Directorate_login/direc_assets/css/DirectorateDashboard.css
+++ b/src/AdminPannel/Directorate_login/direc_assets/css/DirectorateDashboard.css
@@ -150,10 +150,12 @@
     font-size: var(--nd-space-500);
 }
 
+
 .direc-icon img {
-    max-width: 94px;
+
     align-items: center;
     margin-top: 20px;
+    text-align: center;
 }
 
 .stats h6 {
